force-app/main/default/objects/Menu__c/fields/Cuisine_type__c.field-meta.xml
<CustomField>
    <fullName>Cuisine_type__c</fullName>
    <label>Cuisine type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brazilian</fullName>
            </value>
            <value>
                <fullName>Dessert</fullName>
            </value>
            <value>
                <fullName>Fast Food</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Salad</fullName>
            </value>
            <value>
                <fullName>Veggie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>