force-app/main/default/objects/Menu__c/fields/Dish__c.field-meta.xml
<CustomField>
    <fullName>Dish__c</fullName>
    <label>Dish</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cuisine_type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arroz Carreteiro</fullName>
            </value>
            <value>
                <fullName>Brocoli Quinoa Cake</fullName>
            </value>
            <value>
                <fullName>Butternut Lasagna</fullName>
            </value>
            <value>
                <fullName>Cake</fullName>
            </value>
            <value>
                <fullName>Cannelonni</fullName>
            </value>
            <value>
                <fullName>Cesar</fullName>
            </value>
            <value>
                <fullName>Feijão Tropeiro</fullName>
            </value>
            <value>
                <fullName>Feijoada</fullName>
            </value>
            <value>
                <fullName>Fried Chicken (Bucket)</fullName>
            </value>
            <value>
                <fullName>Greek</fullName>
            </value>
            <value>
                <fullName>Ice Cream</fullName>
            </value>
            <value>
                <fullName>Indian Fried Rice</fullName>
            </value>
            <value>
                <fullName>Lasagna</fullName>
            </value>
            <value>
                <fullName>Pepperoni Pizza (1 Slice)</fullName>
            </value>
            <value>
                <fullName>Pudin</fullName>
            </value>
            <value>
                <fullName>Sashimi</fullName>
            </value>
            <value>
                <fullName>Spaghetti</fullName>
            </value>
            <value>
                <fullName>Summer Asian</fullName>
            </value>
            <value>
                <fullName>Sushi</fullName>
            </value>
            <value>
                <fullName>X-Burger with Fries</fullName>
            </value>
            <value>
                <fullName>Yakisoba</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>