force-app/main/default/objects/Menu__c/fields/Menu_Order_Log__c.field-meta.xml
<CustomField>
    <fullName>Menu_Order_Log__c</fullName>
    <label>Menu Order Log</label>
    <length>255</length>
    <type>Text</type>
</CustomField>